# wine-prediction-mlops

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
config/: dev_config.yaml  grafana_datasources.yaml  prod_config.yaml
data/processed/: test.csv  train.csv
k8s/adminer/: adminer-deployment.yaml  adminer-service.yaml
k8s/app/: config.yaml  secret.yaml
k8s/grafana/: grafana-config.yaml  grafana-deployment.yaml  grafana-service.yaml
k8s/minio/: minio-deployment.yaml  minio-pvc.yaml  minio-service.yaml
k8s/mlflow/: mlflow-deployment.yaml  mlflow-service.yaml
k8s/model/: model-api-deployment.yaml  model-api-service.yaml
k8s/postgres/: postgres-deployment.yaml  postgres-initdb.yaml  postgres-service.yaml
k8s/prefect/: prefect-deployment.yaml  prefect-rbac.yaml  prefect-service.yaml  prefect-worker-deployment.yaml
src/: config.py  data_extraction.py  data_preprocessing.py  db.py  main.py  model_api.py  model_deploy.py  model_monitoring.py  model_train.py  pipelines.py  pipelines_deploy.py  simulate_production_data.py  utils.py
